ec2.tf
resource "aws_instance" "tf-inst" {
    ami = "ami-09d3b3274b6c5d4aa"
    instance_type = "t2.micro"
    tags = {
      "Name" = "tf-instance"
    }
}
